--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "dotenv": "^16.4.7",
+    "googleapis": "^148.0.0",
     "next": "15.2.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
